--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -23,7 +23,7 @@ html,
 body {
   height: 100%;
   color: #fff;
-  font-family: Raleway;
+  font-family: "Raleway";
   font-size: 8pt;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -73,7 +73,6 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: "Rajdhani", sans-serif;
 }
 
 h1 {
@@ -102,7 +101,7 @@ h6 {
 
 p {
   font-size: 15px;
-  font-family: Raleway;
+  font-family: "Raleway";
   color: #444444;
   font-weight: 400;
   line-height: 26px;
