--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -25,7 +25,7 @@ html,
 body {
   height: 100%;
   color: #fff;
-  font-family: Raleway;
+  font-family: "Raleway";
   font-size: 8pt;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -63,7 +63,6 @@ h6 {
   margin: 0;
   color: #111111;
   font-weight: 400;
-  font-family: "Rajdhani", sans-serif;
 }
 
 h1 {
@@ -92,7 +91,7 @@ h6 {
 
 p {
   font-size: 15px;
-  font-family: Raleway;
+  font-family: "Raleway";
   color: #444444;
   font-weight: 400;
   line-height: 26px;
