--- a/src/org/thinkit/web/sass/shooting-star.scss
+++ b/src/org/thinkit/web/sass/shooting-star.scss
@@ -29,6 +29,28 @@
     }
   }
 
+  .text {
+    line-height: 20pt;
+    margin: 0 0 20px 0;
+    pointer-events: none;
+    z-index: 1;
+    text-align: center;
+
+    p {
+      color: #fff;
+
+      &:nth-child(1) {
+        font-family: "Rockville Solid";
+        font-size: 80pt;
+      }
+
+      &:nth-child(2) {
+        margin-top: 75px;
+        font-size: 17pt;
+      }
+    }
+  }
+
   .button {
     border: 2px solid #04c2c9;
     box-sizing: inherit;
