--- a/src/org/thinkit/web/sass/shooting-star.scss
+++ b/src/org/thinkit/web/sass/shooting-star.scss
@@ -77,6 +77,19 @@
 
 @media screen and (max-width: 480px) {
   #shooting-star {
+    .text {
+      p {
+        &:nth-child(1) {
+          font-size: 55pt;
+        }
+
+        &:nth-child(2) {
+          font-size: 12pt;
+          margin-top: 50px;
+        }
+      }
+    }
+
     .button {
       font-size: 12pt;
       margin: 0px;
