--- a/src/org/thinkit/web/sass/shooting-star.scss
+++ b/src/org/thinkit/web/sass/shooting-star.scss
@@ -13,19 +13,19 @@
  */
 
 #shooting-star {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 
   #pt {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 
     &.canvas {
-      height: 100vh;
+      height: 100%;
+      width: 100%;
       left: 0;
       position: absolute;
       top: 0;
-      width: 100vw;
     }
   }
 
