--- a/src/org/thinkit/web/css/shooting-star.css
+++ b/src/org/thinkit/web/css/shooting-star.css
@@ -12,21 +12,21 @@
  * the License.
  */
 #shooting-star {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 #shooting-star #pt {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 #shooting-star #pt.canvas {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   left: 0;
   position: absolute;
   top: 0;
-  width: 100vw;
 }
 
 #shooting-star .text {
