--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -186,6 +186,7 @@ ol {
   margin-bottom: 40px;
   position: relative;
   z-index: 1;
+  text-align: center;
 }
 
 .section-title h1 {
@@ -241,7 +242,7 @@ ol {
   border-top: 3px solid #444957;
   height: 20px;
   margin: 0 auto;
-  margin-top: 18px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
