--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -183,6 +183,7 @@ ol {
   margin-bottom: 40px;
   position: relative;
   z-index: 1;
+  text-align: center;
 
   h1 {
     font-size: 100px;
@@ -239,7 +240,7 @@ ol {
   border-top: 3px solid #444957;
   height: 20px;
   margin: 0 auto;
-  margin-top: 18px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
