--- a/src/org/thinkit/web/css/mind.css
+++ b/src/org/thinkit/web/css/mind.css
@@ -21,23 +21,6 @@
   margin-bottom: 20px;
 }
 
-#mind .about-text {
-  padding-top: 70px;
-}
-
-#mind .about-text p {
-  color: #111111;
-  margin-bottom: 35px;
-}
-
-#mind .about-text .section-title {
-  margin-bottom: 28px;
-}
-
-#mind .about-text .section-title h2 {
-  line-height: 55px;
-}
-
 #mind #mind-list {
   text-align: center;
 }
@@ -62,14 +45,14 @@
 }
 
 @media screen and (max-width: 480px) {
-  #about #mind-list .mind .fas,
-  #about #mind-list .mind .far {
+  #mind #mind-list .mind .fas,
+  #mind #mind-list .mind .far {
     font-size: 50px;
   }
-  #about #mind-list .mind .mind-title {
+  #mind #mind-list .mind .mind-title {
     font-size: 22px;
   }
-  #about #mind-list .mind .mind-description {
+  #mind #mind-list .mind .mind-description {
     font-size: 12px;
   }
 }
