--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -298,5 +298,8 @@ ol {
   .section-title h2 {
     font-size: 35px;
   }
+  #footer #copyright .social-links {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=index.css.map */
