--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -303,4 +303,12 @@ ol {
       font-size: 35px;
     }
   }
+
+  #footer {
+    #copyright {
+      .social-links {
+        font-size: 12px;
+      }
+    }
+  }
 }
