--- a/src/org/thinkit/web/css/portfolio.css
+++ b/src/org/thinkit/web/css/portfolio.css
@@ -12,7 +12,7 @@
  * the License.
  */
 #portfolio {
-  background: #f5f5f5;
+  background: #bfbfbf;
   padding-bottom: 200px;
   margin-top: 150px;
 }
