--- a/src/org/thinkit/web/css/index.css
+++ b/src/org/thinkit/web/css/index.css
@@ -137,6 +137,10 @@ ol {
   }
 }
 
+.relaxing-waves-container {
+  margin-bottom: 60px;
+}
+
 /*---------------------
     Button
   -----------------------*/
