--- a/src/org/thinkit/web/sass/index.scss
+++ b/src/org/thinkit/web/sass/index.scss
@@ -132,6 +132,10 @@ ol {
   }
 }
 
+.relaxing-waves-container {
+  margin-bottom: 60px;
+}
+
 /*---------------------
     Button
   -----------------------*/
