--- a/src/org/thinkit/web/css/shooting-star.css
+++ b/src/org/thinkit/web/css/shooting-star.css
@@ -12,18 +12,18 @@
  * the License.
  */
 #shooting-star {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 #shooting-star #pt {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 #shooting-star #pt.canvas {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   left: 0;
   position: absolute;
   top: 0;
