--- a/src/org/thinkit/web/sass/shooting-star.scss
+++ b/src/org/thinkit/web/sass/shooting-star.scss
@@ -13,16 +13,16 @@
  */
 
 #shooting-star {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 
   #pt {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 
     &.canvas {
-      height: 100%;
-      width: 100%;
+      height: 100vh;
+      width: 100vw;
       left: 0;
       position: absolute;
       top: 0;
